--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        .chat-frame{
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
+    <div class="chat-frame">
+        <iframe src='https://webchat.botframework.com/embed/ac5c0529-a240-44e5-905c-502ad47e7bf2?s=
+iPTgFHYj09s.cwA.V4I.TJwFx8RdGWuLT3zoVF05mem1uZUBeOjTiFUiOpvZEdM'></iframe>
+    </div>
     <a href='https://join.skype.com/bot/ac5c0529-a240-44e5-905c-502ad47e7bf2'><img src='https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png'/></a>
 </body>
 </html>
