--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
-    <style>
-        .chat-frame{
-            margin: 0 auto;
-        }
-    </style>
 </head>
 <body>
     <div class="chat-frame">
